feat: record routes
